--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
-    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -45,8 +44,11 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "react-router": "^6.6.2"
   }
