--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
@@ -47,7 +48,11 @@
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "cron": "^2.2.0",
+    "fa": "^1.0.1",
     "fetch": "^1.1.0",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
     "react-router": "^6.6.2"
